# ExamReport

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  SECURITY.md
examples/1_assignment/: question.qtv  structure.qtv
examples/1_solution/: solution.py
examples/1_solution/code/: solution.py  testgen.cpp
examples/2_examination/: question_paper.qtv
src/exceptions/: DocumentStructureException.cpp  DocumentStructureException.hpp
src/interface/: TerminalCommandParser.cpp  TerminalCommandParser.hpp  main.cpp
src/structure/: ParsedDirectoryStructure.cpp  ParsedDirectoryStructure.hpp  main.cpp  parse.cpp  parse.hpp
src/system/: SystemFileManager.cpp  SystemFileManager.hpp
src/utilities/: termcolor.h
